fix: CORS allowedHeaders를 화이트리스트로 축소 (T028)
- Authorization, Content-Type, x-vercel-proxy(프론트 Vercel 프록시 연동)만 허용
- 신뢰할 수 없는 출처의 임의 헤더 preflight를 거부하도록 강화(US4, A3)

[Test Passed]